<resources>
    <string name="app_name">Hello App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Hello World</string>
    <string name="second_fragment_label">Welcome</string>
    <string name="next">Go to Welcome</string>
    <string name="previous">Back to Hello</string>
    
    <!-- Hello App Content -->
    <string name="hello_world_title">Hello World!</string>
    <string name="hello_world_message">Welcome to your first Android app!\n\nThis is a simple Hello World application built with:\n• Kotlin\n• Navigation Component\n• Material Design\n\nTap the button below to explore more!</string>
    
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_message">Congratulations! You\'ve successfully navigated to the second screen.\n\nThis demonstrates:\n• Fragment Navigation\n• Material Design Components\n• Modern Android Development\n\nFeel free to explore and customize this app!</string>
    
    <string name="fab_message">Hello from the Floating Action Button!</string>
</resources>